--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,134 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+<!DOCTYPE HTML>
+<!--
+	Story by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
+	Note: Only needed for demo purposes. Delete for production sites.
+-->
+<html lang="HU">
+	<head>
+		<title>Portfólió</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper" class="divided">
+
+				<!-- Bevezetés -->
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+						<div class="content">
+							<h1>Bevezetés</h1>
+							<p>Üdvözöllek Weboldalamon Árvai Zoltán vagyok Informatikai rendszerüzemeltető!</p>
+							<ul class="actions stacked">
+								<li><a href="#first" class="button large wide smooth-scroll-middle">Életrajz</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/kep0.jpg" alt="ÉN" />
+						</div>
+					</section>
+
+				<!-- Életrajz -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Életrajz</h2>
+							<p>2004. Februárjában születtem Pécsett! Általános iskolai tanulmányaimat 2011-ben kezdtem Dél-Zselic Tinódi Lantos Sebestyén Általános Iskolában Szigetváron, majd e tanulmányaimat befejezve 2019-ben folytattam a Baranya Vármegyei Szakképzési Centrum Zrínyi Miklós Gimnázium és Szakképző Iskolában Informatikai szakon szakgimnáziumban szintén Szigetváron! </p>
+							
+						</div>
+						<div class="image">
+							<img src="images/kep1.png" alt="Iskolák" />
+						</div>
+					</section>
+
+				<!-- Tanulmányaim -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Számítógépes rendszerkarbantartó</h2>
+							<p>Ezen 4 éves képzésben megtanultuk a számítógép rendszereinek működését,felépítését majd érettségit szereztem!</p>
+							Részletesebben:
+							
+							<li><strong>CISCO CCNA</strong></li>
+							
+							<ol>IT, Routing&Switching I.-II. Essentials</ol>
+							
+							<li><strong>Programozás</strong></li>
+							
+							<ol>HTML5, CSS3, C#, MY SQL</ol>
+							
+
+
+							<ul class="actions stacked">
+								
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/kep2.png" alt="Bizonyítványok" />
+						</div>
+					</section>
+
+				<!-- Tanulmányaim-->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Informatikai rendszerüzemeltető</h2>
+							<p>Ezen 1 éves képzésben megtanultuk az Informatikai rendszerek működését,felépítését majd kepesítést szereztem!</p>
+							
+							Részletesebben:
+							
+							<li><strong>Microsoft Windows Server 2016</strong></li>
+							
+							<ol>Active Directory, Domain Server, DHCP Server, DNS, File and Storage Services, ISS, Remote Access</ol>
+							
+							<li><strong>Ubuntu Linux Server</strong></li>
+							
+							<ol>Midnight Commander, Samba Server, DHCP Server, Web Server-Apache2, FTP Server-vsftpd, Felhasználók felvétele, Jelszók,jogusultságok kezelése, Meghajtó csatolások</ol>
+							
+							
+		
+						</div>
+						<div class="image">
+							<img src="images/kep3.png" alt="Bizonyítvány" />
+						</div>
+					</section>
+					
+					<center><h2>Kapcsolatfelvétel</h2></center>
+					
+					
+					<!-- Footer -->
+					
+					
+					<footer class="wrapper style1 align-center">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="https://www.instagram.com/r_zoo_20?igsh=bTQzZzhobGo3NDV3" target="_blank" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.linkedin.com/in/%C3%A1rvai-zolt%C3%A1n-8988b827b/" target="_blank" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							</ul>
+							<p>&copy; Copyright 2025 <br>Design: <a href="https://html5up.net">HTML5 UP</a></p></br>
+						</div>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+		<!-- Note: Only needed for demo purposes. Delete for production sites. -->
+			<script src="assets/js/demo.js"></script>
+
+	</body>
+</html>
+
